Remove javax.xml.bind.DatatypeConverter usege for JDK >= 11 compatibility